[tool.poetry]
name = "deepracer-viz"
version = "0.1.0"
description = ""
authors = ["jochem725 <jochemlugtenburg@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
tensorflow = "^1.14"
autopep8 = "^1.4"
pylint = "^2.3"
numpy = "^1.16"
opencv-python = "^4.1"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
